@@ -15,13 +15,14 @@ package org.apache.shiro.testing.jakarta.ee;
 
 import static org.apache.shiro.testing.jakarta.ee.StatisticsResource.increment;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.concurrent.atomic.AtomicInteger;
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-import javax.faces.context.FacesContext;
-import javax.faces.view.ViewScoped;
-import javax.inject.Named;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
+import jakarta.faces.context.FacesContext;
+import jakarta.faces.view.ViewScoped;
+import jakarta.inject.Named;
 
 import lombok.extern.slf4j.Slf4j;
 import org.apache.shiro.authz.annotation.RequiresUser;
@@ -34,6 +35,7 @@ import org.apache.shiro.authz.annotation.RequiresUser;
 @RequiresUser
 @Slf4j
 public class ProtectedFacesViewScopedBean implements Serializable {
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private static final AtomicInteger INSTANCE_COUNT = new AtomicInteger();
@@ -50,7 +52,7 @@ public class ProtectedFacesViewScopedBean implements Serializable {
     }
 
     public String hello() {
-        return String.format("Hello from FacesViewScoped %s - %s", count,
+        return "Hello from FacesViewScoped %s - %s".formatted(count,
                 FacesContext.class.getPackage().getImplementationVersion());
     }
 }
